# matilda_support

./: CMakeLists.txt  package.xml
config/: rviz.rviz
launch/: load_matilda.launch  view_matilda.launch
meshes/: base_link.STL  link_1.stl  link_2.STL  link_2.stl  link_3.STL  link_4.STL  link_4_old.stl  link_5.STL  link_5.stl
tests/: roslaunch_test_matilda.xml
urdf/: matilda.URDF  matilda.dae  matilda.xacro  matilda_macro.xacro  wrapper.xml
urdf/output/kinematics.f01b084b2f20efad296fc7039f2f69b5/: ikfast71.TranslationYAxisAngle4D.0_1_2_3.cpp  ikfast71.TranslationYAxisAngle4D.0_1_2_3.pp
