<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>matilda_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS description package for Matilda.
    </p>
  </description>
  <author>bas</author>
  <maintainer email="bdebruijn@luminize.nl">bas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
